--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
     ],
     "homepage": "https://developer.heartlandpaymentsystems.com/SecureSubmit",
     "license": "MIT",
-    "authors": ["Heartland Payment Systems"],
+    "authors": [
+      {
+        "name": "Heartland Payment Systems"
+      }
+    ],
     "require": {
         "php": ">=5.2"
     },
