--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         "php": ">=5.2"
     },
     "autoload":{
-        "files": ["Hps.php"]
+        "classmap": ["entities","infrastructure","services"]
     }
 }
