--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "require": {
         "php": ">=5.2"
     },
+	    "require-dev": {
+        "phpunit/phpunit": "~4.4"
+    },
     "autoload":{
       "files": [
             "Hps.php"
